force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/cgcloud__Segmentation_Rule_Def__c.object-meta.xml
<CustomObject>
    <description>Contains the available Queries and its attributes for creating Segmentation Rules.</description>
    <label>Segmentation Rule Definition</label>
    <nameField>
        <label>Segmentation Rule Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Rule Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>