force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <description>Holds the description for the segmentation rule definition.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>