force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__Segmentation_Query__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segmentation_Query__c</fullName>
    <description>SOQL statement with bindings for segmentation rule definition columns.</description>
    <inlineHelpText>SOQL statement with bindings for Segmentation Rule Definition Columns</inlineHelpText>
    <label>Segmentation Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>