force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__State__c</fullName>
    <description>Describes the current status of the segmentation rule definition.</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>