force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__Target__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target__c</fullName>
    <description>Defines the type of the source programmatic language.</description>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>