force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__Total_Columns__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Columns__c</fullName>
    <description>Count of total columns.</description>
    <label>Total Columns</label>
    <summaryForeignKey>cgcloud__Segmentation_Rule_Def_Column__c.cgcloud__Segmentation_Rule_Def__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>