force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__Use_Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Account_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if account hierarchy is used or not.</description>
    <label>Use Account Hierarchy</label>
    <type>Checkbox</type>
</CustomField>