force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/fields/cgcloud__Use_Org_Unit_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Org_Unit_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if org unit hierarchy is used or not.</description>
    <label>Use Org Unit Hierarchy</label>
    <type>Checkbox</type>
</CustomField>