force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/validationRules/cgcloud__Delete_Columns_When_Rule_Def_is_Released.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Delete_Columns_When_Rule_Def_is_Released</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(cgcloud__Total_Columns__c) &amp;&amp; ISPICKVAL(cgcloud__State__c , &apos;Released&apos;)</errorConditionFormula>
    <errorMessage>Columns can&apos;t be deleted if the Segmentation Rule Definition State is &apos;Released&apos;.</errorMessage>
</ValidationRule>