force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/validationRules/cgcloud__Max_Total_of_Columns.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Max_Total_of_Columns</fullName>
    <active>true</active>
    <description>The maximum number of columns allowed is 15.</description>
    <errorConditionFormula>cgcloud__Total_Columns__c &gt; 15</errorConditionFormula>
    <errorMessage>The maximum number of columns allowed is 15.</errorMessage>
</ValidationRule>