force-app/main/default/objects/cgcloud__Segmentation_Rule_Def__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>cgcloud__State__c</columns>
    <columns>NAME</columns>
    <columns>cgcloud__Use_Account_Hierarchy__c</columns>
    <columns>cgcloud__Use_Org_Unit_Hierarchy__c</columns>
    <columns>cgcloud__Segmentation_Query__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>